--- a/src/theme.css
+++ b/src/theme.css
@@ -117,7 +117,8 @@ section:first-child p{
     border: 0;
 }
 
-section.subheader {
+section.subheader,
+body.content-top section.subheader {
     text-align: center;
     max-width: 100%;
     justify-content: center;
@@ -166,7 +167,7 @@ a.thumb::after {
 
 section:first-child > a.thumb{
     text-align: right;
-    margin: 40px auto 0;
+    margin: 40px auto;
     display: block;
     position: absolute;
     bottom: 10vh;
@@ -262,10 +263,13 @@ section.closing > a.thumb::after{
 section.closing ul {
     margin-top: 0;
     background-color: #000;
-    list-style: decimal-leading-zero;
     padding: 1em 48px;
     border-right: #FA5F5F 8px solid;
     color: #FA5F5F;
+}
+
+section.closing.thumb ul {
+    list-style: decimal-leading-zero;
 }
 
 section.closing ul a {
@@ -434,12 +438,18 @@ section {
     flex-direction: column;
 }
 
+body.content-top section {
+    justify-content: flex-start;
+    margin-top: 8px;
+}
+
 section:first-of-type, section:last-of-type {
     display: flex;
     flex-direction: column;
 }
 
-section:first-of-type {
+section:first-of-type,
+body.content-top section:first-of-type {
     justify-content: center;
     text-align: center; 
 }
@@ -643,15 +653,16 @@ input#mce-EMAIL{
     section {
         margin: 0; /* spacing handled within main */
         max-width: none;
-        height: 80dvh; /* Use dvh (dynamic viewport) for Safari mobile UI */
-        padding: 0 0 20dvh; /* Use dvh (dynamic viewport) for Safari mobile UI */
+        height: 100dvh; /* Use dvh (dynamic viewport) for Safari mobile UI */
+        padding: 0; /* Use dvh (dynamic viewport) for Safari mobile UI */
         justify-content: end;
         overflow: hidden; /* hide scrolling on main if content overflows */
         position: relative;
     }
 
     section:first-of-type {
-        justify-content: end;
+        justify-content: flex-end !important;
+        margin: 0;
     }
 
     section:first-of-type #logo img{
@@ -680,11 +691,11 @@ input#mce-EMAIL{
     }
 
     section:first-of-type > div#lang{
-        margin: 240px 0 160px;
+        margin: 40px 0 64px;
     }
 
     section:first-child > a.thumb{
-        margin-bottom: 80px;
+        position: relative;
     }
 
     section.closing > a.thumb{
@@ -706,7 +717,8 @@ input#mce-EMAIL{
 }
 
 /* Social Share Buttons */
-.share-section {
+.share-section,
+body.content-top .share-section {
     text-align: center;
     margin: 2em auto;
     display: flex;
